List.of() doesn't handle null values